--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -105,6 +105,20 @@
 						</div>
 					</countdown>
 					<print content="notes">
+					<faq>
+						<div class="row mt-3">
+							<div class="col-11">
+								<faqjsonld>
+								<h4>Frequently Asked Questions</h4>
+								<faqitems>
+									<details<print open>>
+										<summary><print question></summary>
+										<p class="px-4"><print answer></p>
+									</details>
+								</faqitems>
+							</div>
+						</div>
+					</faq>
 					<options>
 						<details class="mt-5" open>
 							<summary class="h3"><print options="category"></summary>
