--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -1,5 +1,5 @@
     <lightbox>
-    <script defer async src="core/js/js.js"></script>
+    <script defer async src="<print javascript>"></script>
     <carousel>
     <chatscript>
     <gdpr>
