--- a/layout/default/meta_head.html
+++ b/layout/default/meta_head.html
@@ -42,7 +42,7 @@
 		<link rel="apple-touch-icon" href="<print meta=favicon>">
 		<link rel="publisher" href="<print meta=url>">
 		<link rel="home" href="<print meta=url>" title="Home page">
-		<link rel="stylesheet preload" type="text/css" href="<print theme>/css/style.css">
+		<link rel="stylesheet preload" type="text/css" href="<print theme>" as="style">
 		<google_analytics>
 	</head>
 	<body id="back-to-top" class="m-0 p-0<print saleClass>">
