--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -70,7 +70,7 @@
 							<div class="row justify-content-center">
 								<mediaimages>
 									<div class="gallery col-6 col-md-2">
-										<a class="gallery-image" data-fancybox="media<print content=id>" data-id="<print media=id>" data-caption="<print media=caption>" href="<print media=file>" data-srcset="<print lightbox=srcset>">
+										<a class="gallery-image<nolightbox>" data-fancybox="media<print content=id>" data-id="<print media=id>" data-caption="<print media=caption>" href="<print media=file>" data-srcset="<print lightbox=srcset>">
 											<img <print thumb=srcset>src="<print media=thumb>" loading="lazy" alt="<print media=title>">
 										</a>
 									</div>
@@ -299,12 +299,11 @@
 							</div>
 							<div class="card-header h5"><a href="<print content=linktitle>" title="<print content=title>"><print content="title"></a></div>
 							<div class="text-center my-3 hidewhenempty"><print content="cost"></div>
-							<div class="card-footer">
-								<a class="btn" href="<print content=linktitle>" role="button">View</a>
-								<quickview>
+							<quickview>
+								<div class="card-footer">
 									<a class="btn" data-fancybox="products" data-type="ajax" data-src="core/quickview.php?id=<print content=id>" href="javascript:;">Quick View</a>
-								</quickview>
-							</div>
+								</div>
+							</quickview>
 						</article>
 					</items>
 				</div>
